Update icon paths

--- a/src/App/createAccount.form
+++ b/src/App/createAccount.form
@@ -130,7 +130,7 @@
                 <Component class="javax.swing.JLabel" name="logo">
                   <Properties>
                     <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                      <Image iconType="3" name="/App/logo.png"/>
+                      <Image iconType="3" name="/App/Images/logo.png"/>
                     </Property>
                   </Properties>
                 </Component>
