--- a/src/App/RecordViewing.form
+++ b/src/App/RecordViewing.form
@@ -83,7 +83,7 @@
                 <Component class="javax.swing.JLabel" name="jLabel3">
                   <Properties>
                     <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                      <Image iconType="3" name="/App/logo_dashboard.png"/>
+                      <Image iconType="3" name="/App/Images/logo_dashboard.png"/>
                     </Property>
                   </Properties>
                   <Constraints>
@@ -271,7 +271,7 @@
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/App/user_profile.png"/>
+              <Image iconType="3" name="/App/Images/user_profile.png"/>
             </Property>
           </Properties>
           <Constraints>
@@ -445,7 +445,7 @@
             <Component class="javax.swing.JLabel" name="jLabel4">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/App/printer.png"/>
+                  <Image iconType="3" name="/App/Images/printer.png"/>
                 </Property>
               </Properties>
               <Constraints>
@@ -546,7 +546,7 @@
                     <Component class="javax.swing.JLabel" name="jLabel6">
                       <Properties>
                         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                          <Image iconType="3" name="/App/info.png"/>
+                          <Image iconType="3" name="/App/Images/info.png"/>
                         </Property>
                       </Properties>
                       <Constraints>
@@ -825,7 +825,7 @@
                     <Component class="javax.swing.JLabel" name="jLabel7">
                       <Properties>
                         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                          <Image iconType="3" name="/App/info.png"/>
+                          <Image iconType="3" name="/App/Images/info.png"/>
                         </Property>
                       </Properties>
                       <Constraints>
