--- a/src/App/addRecord.form
+++ b/src/App/addRecord.form
@@ -83,7 +83,7 @@
                 <Component class="javax.swing.JLabel" name="jLabel3">
                   <Properties>
                     <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                      <Image iconType="3" name="/App/logo_dashboard.png"/>
+                      <Image iconType="3" name="/App/Images/logo_dashboard.png"/>
                     </Property>
                   </Properties>
                   <Constraints>
@@ -268,7 +268,7 @@
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/App/user_profile.png"/>
+              <Image iconType="3" name="/App/Images/user_profile.png"/>
             </Property>
           </Properties>
           <Constraints>
