--- a/src/App/RecordViewing.form
+++ b/src/App/RecordViewing.form
@@ -401,9 +401,10 @@
                     <Component class="javax.swing.JTable" name="table1">
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                          <Table columnCount="5" rowCount="35">
+                          <Table columnCount="6" rowCount="35">
                             <Column editable="false" title="ID" type="java.lang.Integer"/>
                             <Column editable="false" title="PRODUCT NAME" type="java.lang.String"/>
+                            <Column editable="false" title="STOCKS" type="java.lang.Integer"/>
                             <Column editable="false" title="NO. OF SOLD" type="java.lang.Integer"/>
                             <Column editable="false" title="SALES" type="java.lang.Integer"/>
                             <Column editable="false" title="PROFIT" type="java.lang.Integer"/>
@@ -411,6 +412,16 @@
                         </Property>
                         <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                           <TableColumnModel selectionModel="0">
+                            <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                              <Title/>
+                              <Editor/>
+                              <Renderer/>
+                            </Column>
+                            <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                              <Title/>
+                              <Editor/>
+                              <Renderer/>
+                            </Column>
                             <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                               <Title/>
                               <Editor/>
