--- a/src/App/RecordViewing.form
+++ b/src/App/RecordViewing.form
@@ -401,13 +401,14 @@
                     <Component class="javax.swing.JTable" name="table1">
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                          <Table columnCount="6" rowCount="35">
+                          <Table columnCount="7" rowCount="35">
                             <Column editable="false" title="ID" type="java.lang.Integer"/>
-                            <Column editable="false" title="PRODUCT NAME" type="java.lang.String"/>
+                            <Column editable="false" title="PRODUCT TYPE" type="java.lang.String"/>
                             <Column editable="false" title="STOCKS" type="java.lang.Integer"/>
                             <Column editable="false" title="NO. OF SOLD" type="java.lang.Integer"/>
                             <Column editable="false" title="SALES" type="java.lang.Integer"/>
                             <Column editable="false" title="PROFIT" type="java.lang.Integer"/>
+                            <Column editable="false" title="TIMESTAMP" type="java.lang.String"/>
                           </Table>
                         </Property>
                         <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
