change table name

--- a/src/App/RecordViewing.form
+++ b/src/App/RecordViewing.form
@@ -463,7 +463,7 @@
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                           <Table columnCount="7" rowCount="35">
                             <Column editable="false" title="ID" type="java.lang.Integer"/>
-                            <Column editable="false" title="PRODUCT TYPE" type="java.lang.String"/>
+                            <Column editable="false" title="PRODUCT NAME" type="java.lang.String"/>
                             <Column editable="false" title="STOCKS" type="java.lang.Integer"/>
                             <Column editable="false" title="NO. OF SOLD" type="java.lang.Integer"/>
                             <Column editable="false" title="SALES" type="java.lang.Integer"/>
@@ -473,6 +473,11 @@
                         </Property>
                         <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                           <TableColumnModel selectionModel="0">
+                            <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                              <Title/>
+                              <Editor/>
+                              <Renderer/>
+                            </Column>
                             <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                               <Title/>
                               <Editor/>
